--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,3 +1,7 @@
+h1 {
+  text-align: center;
+}
+
 .buttonGroup {
   text-align: center;
   padding: 45px;
@@ -9,10 +13,20 @@
   margin-right: 300px;
 }
 
+#randomBtn {
+  margin-bottom: 10px;
+}
+
 .row {
   display: inline-block;
 }
 
 .jumbotron {
   text-align: center;
+}
+
+#searchImg {
+  width: 100%;
+  height: 200px;
+  margin-top: 10px;
 }
